2005-06-29  graydon hoare  <graydon@pobox.com>

	* tests/t_cvsimport_drepper2.at: New test.
	* testsuite.at: Call it.

2005-06-23  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc (import_cvs_repo): Put branch imports inside
	transaction blocks, add a couple tickers.

2005-06-22  graydon hoare  <graydon@pobox.com>

	* rcs_file.cc: Track file:line numbers, accept files which violate
	some lies in rcs file format.
	* rcs_import.cc (cvs_tree_walker): 
	Warn rather than crash on parse errors.
	(cvs_history)
	(cvs_commit)
	(cvs_cluster)
	(prepared_revision)
	(import_branch)
	(import_cvs_repo): Support non-branch tags.

2005-06-21  graydon hoare  <graydon@pobox.com>

	* rcs_import.{cc,hh} (import_rcs_file): Rename to test_parse_rcs_file.
	* commands.cc (rcs_import): rename call.

2005-06-19  graydon hoare  <graydon@pobox.com>

	* rcs_import.cc: Rewrite change set inference logic.

2005-06-28  Roland Illig  <roland.illig@gmx.de>

	* app_state.cc: #include <unistd.h>, needed on NetBSD.

2005-06-28  Nathaniel Smith  <njs@codesourcery.com>

	* std_hooks.lua (ignore_file): Ignore vim swap files and emacs
	temp files.

2005-06-27  Nathaniel Smith  <njs@codesourcery.com>

	* INSTALL: Bump required version of Boost to 1.32.

2005-06-26  Matthew Gregan  <kinetik@orcon.net.nz>

	* app_state.cc (app_state::app_state()): Initialise no_merges to
	false so that 'log' will show merges by default (the recently
	added --no-merges option provides a means to disable the merge
	entries).

2005-06-26  Matthew Gregan  <kinetik@orcon.net.

	* tests/t_automate_stdio.at, tests/t_cvsimport_drepper.at,
	tests/t_selector_later_earlier.at: Further canonicalisation of
	monotone output to resolve test failures on Win32.

2005-06-25  Brian Campbell  <brian.p.campbell@dartmouth.edu>

	* commands.cc (CMD(db)): Added db kill_branch_locally command. 
	* database.cc, database.hh (delete_branch_named): New function to
	delete all branch certs with a given branch name.