@@ -74,6 +74,10 @@
 # include <netdb.h>
 # include <fcntl.h>
 # include <errno.h>
+
+# include <string.h>
+# include <stdlib.h>
+
 #endif
 
 #include "config.h"
